--- a/index.html
+++ b/index.html
@@ -7,7 +7,42 @@
     <link ref="styles.css" rel="stylesheet">
 </head>
 <body>
-    <div>
+    <header>
+        <div class="logo">Header Logo</div>
+        <div class="links">
+            <ul>
+                <li><a href="#">header link one</a></li>
+                <li><a href="#">header link two</a></li>
+                <li><a href="#">header link three</a></li>
+            </ul>
+        </div>
+    </header>
+    <div class="hero">
+        <div>
+            <h1>This website is awesome</h1>
+            <p>This website has some subject text that goes here 
+                under the main title. It's a smaller font and the 
+                color is lower contrast.
+            </p>
+            <button>Sign Up</button>
+        </div>
+        <img src=""/>
     </div>
+    <main>
+        <h2>Some random information.</h2>
+        <div class="content-cards">
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
+        </div>
+        <aside>
+            <em>Insert quote here.</em>
+        </aside>
+    </main>
+    <footer>
+        <div class="action"></div>
+        <button>Sign Up</button>
+    </footer>
 </body>
 </html>
