--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page Project</title>
-    <link ref="styles.css" rel="stylesheet">
+    <link href="./styles.css" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -16,18 +16,18 @@
                 <li><a href="#">header link three</a></li>
             </ul>
         </div>
-    </header>
-    <div class="hero">
-        <div>
-            <h1>This website is awesome</h1>
-            <p>This website has some subject text that goes here 
-                under the main title. It's a smaller font and the 
-                color is lower contrast.
-            </p>
-            <button>Sign Up</button>
+        <div class="hero">
+            <div class="hero-card">
+                <h1>This website is awesome</h1>
+                <p>This website has some subject text that goes here 
+                    under the main title. It's a smaller font and the 
+                    color is lower contrast.
+                </p>
+                <button>Sign Up</button>
+            </div>
+            <img src=""/>
         </div>
-        <img src=""/>
-    </div>
+    </header>
     <main>
         <h2>Some random information.</h2>
         <div class="content-cards">
@@ -36,13 +36,20 @@
             <div class="card"></div>
             <div class="card"></div>
         </div>
-        <aside>
-            <em>Insert quote here.</em>
+        <aside class="quote-section">
+            <p class="quote-text"><em>Insert quote here.</em></p>
+            <p>Person who said it</p>
         </aside>
+        <div class="call-section">
+            <div class="action">
+                <h3>Call to action! It's time!</h3>
+                <p>Sign up for our product by clicking that button right over there!</p>
+            </div>
+            <button>Sign Up</button>
+        </div>
     </main>
     <footer>
-        <div class="action"></div>
-        <button>Sign Up</button>
+        <p>Copyright © The Odin Project 2023<p>
     </footer>
 </body>
 </html>
