Reformat header and hero HTML

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
                 <li><a href="#">header link three</a></li>
             </ul>
         </div>
+    </header>
         <div class="hero">
             <div class="hero-card">
                 <h1>This website is awesome</h1>
@@ -25,9 +26,9 @@
                 </p>
                 <button>Sign Up</button>
             </div>
-            <img src=""/>
+            <img src="./photos/grampa.JPG" height="200" width="auto"/>
         </div>
-    </header>
+    <!-- </header> -->
     <main>
         <h2>Some random information.</h2>
         <div class="content-cards">
