--- a/index.html
+++ b/index.html
@@ -7,34 +7,34 @@
     <link href="./styles.css" rel="stylesheet">
 </head>
 <body>
-    <header>
+    <header class="dark-bg">
         <div class="head">
             <div class="logo">Header Logo</div>
             <div class="links">
                 <ul>
-                    <li><a href="#">header link one</a></li>
-                    <li><a href="#">header link two</a></li>
-                    <li><a href="#">header link three</a></li>
+                    <li><a class="light-text" href="#">header link one</a></li>
+                    <li><a class="light-text" href="#">header link two</a></li>
+                    <li><a class="light-text" href="#">header link three</a></li>
                 </ul>
             </div>
         </div>
         <div class="hero">
                         <!-- Find a way to prevent the divs from overflowing the parent container -->
             <div class="hero-card">
-                <h1>This website is awesome</h1>
-                <p>This website has some subject text that goes here 
+                <h1 class="extra-bold">This website is awesome</h1>
+                <p class="light-text">This website has some subject text that goes here 
                     under the main title. It's a smaller font and the 
                     color is lower contrast.
                 </p>
-                <button>Sign Up</button>
+                <button type="button" class="blue">Sign Up</button>
             </div>
             <div class="hero-image">
-                <img src="./photos/grampa.JPG" height="250" width="auto"/>
+                <img src="./photos/grampa.JPG" width="400px" height="auto">
             </div>
         </div>
     </header>
     <main>
-        <h2>Some random information.</h2>
+        <h2 class="dark-text extra-bold">Some random information.</h2>
         <div class="content-cards">
             <div class="card"></div>
             <div class="card"></div>
@@ -42,21 +42,21 @@
             <div class="card"></div>
         </div>
         <aside class="quote-section">
-            <p class="quote-text"><em>This is an inspiring quote, or a testimonial from a customer. Maybe 
+            <p class="quote-text dark-text"><em>This is an inspiring quote, or a testimonial from a customer. Maybe 
                 it's just filling up space, or maybe people will actually read it. Who knows? All I know 
                 is that it looks nice.</em></p>
-            <p>-Thor, the God of Thunder</p>
+            <p class="justify-right"><strong>-Thor, the God of Thunder</strong></p>
         </aside>
-        <div class="call-section">
+        <div class="call-section blue">
             <div class="action">
-                <h3>Call to action! It's time!</h3>
-                <p>Sign up for our product by clicking that button right over there!</p>
+                <h3 class="light-text">Call to action! It's time!</h3>
+                <p class="light-text">Sign up for our product by clicking that button right over there!</p>
             </div>
-            <button>Sign Up</button>
+            <button type="button" class="blue light-border">Sign Up</button>
         </div>
     </main>
-    <footer>
-        <p>Copyright © The Odin Project 2023<p>
+    <footer class="dark-bg">
+        <p class="light-text">Copyright © The Odin Project 2023<p>
     </footer>
 </body>
 </html>
