--- a/index.html
+++ b/index.html
@@ -36,10 +36,22 @@
     <main>
         <h2 class="dark-text extra-bold">Some random information.</h2>
         <div class="content-cards">
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
+            <div class="card">
+                <div class="img"></div>
+                <p class="subtext">this is some subtext under an image</p>
+            </div>
+            <div class="card">
+                <div class="img"></div>
+                <p class="subtext">this is some subtext under an image</p>
+            </div>
+            <div class="card">
+                <div class="img"></div>
+                <p class="subtext">this is some subtext under an image</p>
+            </div>
+            <div class="card">
+                <div class="img"></div>
+                <p class="subtext">this is some subtext under an image</p>
+            </div>
         </div>
         <aside class="quote-section">
             <p class="quote-text dark-text"><em>This is an inspiring quote, or a testimonial from a customer. Maybe 
